--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,16 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
+    "rootDir": ".",
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@widgets": ["./src/b_widgets/index.ts"],
+      "@features": ["./src/c_features/index.ts"],
+      "@entities": ["./src/d_entities/index.ts"],
+      "@shared": ["./src/e_shared/index.ts"],
+      "@shared-inner/*": ["./src/e_shared/*"]
+    },
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
