--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": "next",
+  "extends": ["next/core-web-vitals"],
   "plugins": ["import"],
   "rules": {
     "import/no-relative-parent-imports": [
