--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "@types/react-modal": "^3.16.3",
     "next": "14.1.3",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1"
   },
