--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "@types/nprogress": "^0.2.3",
     "@types/react-modal": "^3.16.3",
     "next": "14.1.3",
+    "nprogress": "^0.2.0",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
