--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@types/nprogress": "^0.2.3",
     "@types/react-modal": "^3.16.3",
+    "gsap": "^3.12.5",
     "next": "14.1.3",
     "nprogress": "^0.2.0",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-error-boundary": "^4.0.13",
+    "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1"
