--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@types/nprogress": "^0.2.3",
     "@types/react-modal": "^3.16.3",
+    "@vercel/analytics": "^1.3.1",
     "gsap": "^3.12.5",
     "next": "14.1.3",
     "nprogress": "^0.2.0",
