--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/nprogress": "^0.2.3",
     "@types/react-modal": "^3.16.3",
     "@vercel/analytics": "^1.3.1",
+    "d3": "^7.9.0",
     "gsap": "^3.12.5",
     "next": "14.1.3",
     "nprogress": "^0.2.0",
@@ -28,6 +29,7 @@
     "redux": "^5.0.1"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
